0.3.3

* Index update - retry to fetch in case of "Network Connect Timeout Error"

0.3.2 2018-10-18

* Changes file dates fixed

0.3.1 2018-10-18

* Hotfix for task/plg run for Linux platforms

0.3.0 2018-10-18

* Offline mode support

* Windows support

* Rewrite platform dependable code to pure Perl

0.2.53 2017-12-04

* Plg\_run - hot fix for --format parameter resolution

0.2.52 2017-11-29

* Task\_run - hot fix for --format parameter resolution

0.2.51 2017-11-13

* Install plugin - add Agent header as `sparrow` to count statistics ( TBD )
* Add sparrow.yaml to documentation file and support `--format` parameter

0.2.50  2017-09-30

* sparrow plg run, sparrow task run - PERL5LIB uses absolute paths

0.2.49  2017-09-27

Fix for #10 - `plg man for private plugins`

0.2.48  2017-07-25

* PYTHONLIB - make path to ./python-lib - absolute

0.2.47 2017-07-13

* Alternative name for README file set by `doc` field in sparrow.json
* Use the latest version of outthentic 
* Add documentation about sparrow_version, python_version

0.2.46 ???

0.2.45 2017-07-13

* Fix some pip install issues 
* Declare sparrow version at sparrow.json to require Sparrow of certain version

0.2.44 2017-07-11

* Hotfix: PYTHONPATH set for `task run`

0.2.43 2017-07-11

* Support for experimental feature - now you can set python version in sparrow.json to make `plg install` command use proper pip (pip or pip3) when install dependencies

0.2.42 2017-07-11

* Support for experimental feature - pass command line arguments in free style by ` -- args args args ` in `plg run` and `task run` commands

0.2.41 2017-07-10

* Requires Outthentic, version 0.3.0


0.2.40 2017-07-07

* `sparrow plg install`  - Install pythin scripts into local/bin

0.2.39 2017-06-29

* Support for --cwd `parameter` for `strun`
* fix for #17

0.2.38 2017-06-23

* Support for custom repositories
* Fix - #16 . Now sparrow correctly parses run time parameter when `plg run` or `task run`

0.2.37 2017-05-15
