@@ -20,6 +20,7 @@ requires    'HTTP::Tiny';
 requires    'IO::Socket::SSL';
 requires    'Archive::Extract';
 requires    'Archive::Tar';
+requires    'File::Copy::Recursive';
 license     'perl';
 
 repository  'https://github.com/melezhik/sparrow';
